--- a/index.html
+++ b/index.html
@@ -4,19 +4,55 @@
   <meta charset="utf-8"> <!--Seleccionar el Set de Caracteres-->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!--Sirve para seleccionar el viewport de la pantalla, es decir, a que escala estará definido -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> <!--Sirve para cargar el CDN de la hoja de estilos de Bootstrap-->
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"><!--Estilos de iconos awesome-->
   <link rel="stylesheet" href="estilo.css">
   <title>Hello, world!</title> <!--Definir título en la barra de título-->
 </head>
 <body>
+  <header class="container-fluid">
+    <div class="row">
+    <nav class="col-md-4">
+      <ul >
+        <li ><a href="#" class="activo"><b>Home</b></a></li>
+        <li ><a href="#">What we do?</a></li>
+        <li ><a href="#">Testimonials</a></li>
+        <li ><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="col-md-2 offset-md-6"><!-- offset-md-6 es para avisar que tiene una distancia de 6 columnas, para funcion de bootstrap version 3. class="col-md-4"-->
+      <form action="#">
+        <input type="text" placeholder="Search..." class="buscador">
+      </form>
+      </div>
+    </div>
+    </div>
+    </div>
+    <div class="row" id="center-header">
+      <div class="col-md-12" id="centradito">    
+      <h1 class="text-center">Art is Eternal Happiness</h1>
+      <a href="#" class="d-block text-center">WORK WITH US</a>
+    </div>
+  </div>
+    <div id="pie">
+      <a href="#">scroll down<i class="fa fa-arrow-down derecha"></i></a>
+    </div>
+  </header>
   <!-- <a href="#" class="btn btn-danger">Ir a google.com</a> -->
   <div class="container">
     <div class="row">
       <div class="col"></div>
       <div class="col">
-        <h1>Hello, world!</h1>
+        <h2 class="mano">WHAT WE DO</h2>
       </div>
       <div class="col"></div>
     </div>
   </div>
+  <hr class="rayita">
+  <div>
+    <h2 class="bajo">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</h2>
+  </div>
 </body>
+<SECTION class="">
+  
+</SECTION>
 </html>
