--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       </form>
       </div>
     </div>
-    </div>
-    </div>
+ </div>
+   </div>
     <div class="row" id="center-header">
       <div class="col-md-12" id="centradito">    
       <h1 class="text-center">Art is Eternal Happiness</h1>
-      <a href="#" class="d-block text-center">WORK WITH US</a>
+      <a href="#" class="d-block text-center">WORK WITH </a>
     </div>
   </div>
     <div id="pie">
@@ -41,15 +41,53 @@
   <div class="container">
     <div class="row">
       <div class="col"></div>
-      <div class="col">
-        <h2 class="mano">WHAT WE DO</h2>
+      <div class="ol-8 offset-2 encabezado">
+        <h2 class="mano">WHAT WE DO</h2>  
       </div>
       <div class="col"></div>
     </div>
   </div>
-  <hr class="rayita">
+  
   <div>
     <h2 class="bajo">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</h2>
+  </div>
+  <div class="row">
+    <article class="col article">
+      <div class="Iconosi">
+        <i class="fas fa-camera-retro"></i>
+      </div>
+      <h3>Lorem Ipsum</h3>
+      <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor</p>
+      <a href="#">Learn more</a>
+    </article>
+    <article class="col article">
+      <div class="Iconosi">
+        <i class="fas fa-tachometer-alt"></i>
+      </div>
+      <h3>Lorem Ipsum</h3>
+      <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor</p>
+      <a href="#">Learn more</a>
+    </article>
+    <article class="col article">
+      <div class="Iconosi">
+        <i class="fas fa-briefcase"></i>
+      </div>
+      <h3>Lorem Ipsum</h3>
+      <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor</p>
+      <a href="#">Learn more</a>
+    </article>
+  </div>
+  <div class="container-fluid">
+    <div class="row verde">
+    <div class="col-8 offset-2 encabezado">
+      <h2>OUR LATEST WORK</h2>
+      <p>Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</p>
+    </div>
+    </div>
+  </div>
+
+  
+    
   </div>
 </body>
 <SECTION class="">
